--- a/Race.ipynb
+++ b/Race.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pygame 1.9.6\n",
+      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
+     ]
+    }
+   ],
    "source": [
     "import pygame\n",
     "from random import randint\n",
@@ -17,30 +26,30 @@
     "#Класс Object отвечает за объекты, которые непосредственно отображаются на экран\n",
     "class Object(Sprite):\n",
     "    def __init__(self, screen, img_filename, x, y, CELL_SIZE, color):\n",
-    "        self.happy = None\n",
     "        Sprite.__init__(self)\n",
-    "        self.x = x * CELL_SIZE + 0.5 * CELL_SIZE\n",
-    "        self.y = y * CELL_SIZE + 0.5 * CELL_SIZE\n",
+    "        self.x = int(x * CELL_SIZE + 0.5 * CELL_SIZE)\n",
+    "        self.y = int(y * CELL_SIZE + 0.5 * CELL_SIZE)\n",
     "        self.size = CELL_SIZE\n",
     "        self.color = color\n",
     "        self.original_image = pygame.image.load(img_filename)\n",
     "        self.image = pygame.transform.scale(self.original_image,(int(CELL_SIZE), int(CELL_SIZE)))\n",
     "        self.screen = screen\n",
+    "    def new_x_y(self,x,y):\n",
+    "        self.x = int(x * self.size + 0.5 * self.size)\n",
+    "        self.y = int(y * self.size + 0.5 * self.size)\n",
     "    def update(self,screen):\n",
     "        pygame.draw.circle(screen, self.color, (int(self.x), int(self.y)), int(self.size/2))\n",
     "        self.rect = self.image.get_rect(center=(self.x, self.y))\n",
     "        screen.blit(self.image, self.rect)\n",
     "#Основная информация об объектах хранится в виде числовой таблицы, с которой работает вся программа\n",
     "#Объекты анимации создаются лишь в момент отрисовки\n",
-    "def show(screen, Object_List, size, CELL_SIZE, race_colors):\n",
-    "    Animation_List = []\n",
-    "    for y in range(len(Object_List)):\n",
-    "        for x in range(len(Object_List[y])):\n",
-    "            obj = Object_List[y][x]\n",
-    "            if obj != 0:\n",
-    "                Animation_List.append(Object(screen,'mask.png', y, x, CELL_SIZE, race_colors[int(fabs(obj))-1]))\n",
-    "    for obj in Animation_List:\n",
-    "        obj.update(screen)\n",
+    "def show(screen, Animation_List):\n",
+    "    for line in Animation_List:\n",
+    "        for obj in line:\n",
+    "            if obj!=0:\n",
+    "                #Костыль, иногда координаты не обновляются :(\n",
+    "                obj.new_x_y(Animation_List.index(line),line.index(obj))\n",
+    "                obj.update(screen)\n",
     "#Функция отрисовки сетки\n",
     "def draw_grid(screen, size, CELL_SIZE):\n",
     "    for i in range(size + 1):\n",
@@ -51,15 +60,16 @@
     "def show_info(screen, country, size, k ,SCREEN_HEIGHT):\n",
     "    font = pygame.font.Font(None, 45)\n",
     "    K_INFO = 'K:' + str(k)\n",
-    "    Un_INFO = 'Unhappy:' + str(round(percentage_of_unhappy(size, country),3)) + '%'\n",
+    "    Un_INFO = 'Unhappy:' + str(round(percentage_of_unhappy(size, country)[1],3)) + '%'\n",
     "    draw_text1 = font.render(K_INFO, 1, (0,0,0))\n",
     "    draw_text2 = font.render(Un_INFO, 1, (0,0,0))\n",
     "    screen.blit(draw_text1, (50, SCREEN_HEIGHT-70))\n",
     "    screen.blit(draw_text2, (50, SCREEN_HEIGHT-30))\n",
     "#Функция генерации исходной числовой таблицы. В таблице содержаться числа, отвечающие за \"расу\" в этой клетке\n",
     "#если клетка \"несчастна\", то значение числа не меняется, но оно становится отрицательным\n",
-    "def create_random_country(size,proportion):\n",
+    "def create_random_country(screen, size, proportion, race_color, CELL_SIZE):\n",
     "    country = [[0 for i in range(size)] for j in range(size)]\n",
+    "    animation_list = [[0 for i in range(size)] for j in range(size)]\n",
     "    populated_areas = []\n",
     "    free_areas = [(i, j) for i in range(size) for j in range(size)]\n",
     "    for race_id in range(len(proportion[1:])+1):\n",
@@ -69,8 +79,13 @@
     "            populated_areas.append(tuple(list(free_areas[new_populated_cell_id]) + [race_id]))\n",
     "            del free_areas[new_populated_cell_id]\n",
     "    for habitant in populated_areas:\n",
-    "        country[habitant[0]][habitant[1]] = habitant[2]\n",
-    "    return country\n",
+    "        if country[habitant[0]][habitant[1]] != habitant[2]:\n",
+    "            country[habitant[0]][habitant[1]] = habitant[2]\n",
+    "            if habitant[2]!=0:\n",
+    "                animation_list[habitant[0]][habitant[1]] = Object(screen,'mask.png',\n",
+    "                                                          habitant[0], habitant[1], CELL_SIZE,\n",
+    "                                                          race_color[int(fabs(habitant[2]))-1])\n",
+    "    return country, animation_list\n",
     "#Функция получения всех соседних клеток. ВАЖНО: сама клетка тоже попадет в результат\n",
     "def find_neighbors(country, x, y):\n",
     "    #Обработка исключений на углах\n",
@@ -126,28 +141,31 @@
     "                free_list.append(tuple([x,y]))\n",
     "    return free_list[randint(0, len(free_list)-1)]\n",
     "#Перемещение \"несчастной\" клетки по своодному адресу\n",
-    "def sad_move(country):\n",
+    "def sad_move(country, animation):\n",
     "    unhappy_x, unhappy_y = find_random_unhappy(country)\n",
     "    free_x, free_y = find_random_free_cell(country)\n",
     "    if unhappy_x != None:\n",
     "        country[free_y][free_x], country[unhappy_y][unhappy_x] = country[unhappy_y][unhappy_x], country[free_y][free_x]\n",
+    "        animation[unhappy_y][unhappy_x].new_x_y(free_x, free_y)\n",
+    "        animation[free_y][free_x], animation[unhappy_y][unhappy_x] = animation[unhappy_y][unhappy_x], animation[free_y][free_x]\n",
     "#Процент \"несчастных\" клеток\n",
     "def percentage_of_unhappy(size, country):\n",
     "    All = [j for i in country for j in i if j != 0]\n",
     "    unhappys = [i for i in All if i < 0]\n",
-    "    return (len(unhappys) / len(All) * 100)\n",
+    "    return (len(unhappys), len(unhappys) / len(All) * 100)\n",
     "#Основная функция с инциализацией и циклом\n",
-    "def run(size, proportion, max_fps, race_colors):\n",
+    "def run(size, proportion, max_fps, race_colors, step):\n",
     "    #нормировка пропорции\n",
     "    proportion = [i/sum(proportion) for i in proportion]\n",
-    "    country = create_random_country(size, proportion)\n",
-    "    happy_or_unhappy(country)\n",
-    "    SCREEN_WIDTH, SCREEN_HEIGHT = 700, 700\n",
+    "    pygame.init()\n",
+    "    #screen = pygame.display.set_mode((0,0),pygame.FULLSCREEN)\n",
+    "    SCREEN_WIDTH, SCREEN_HEIGHT = [pygame.display.Info().current_h-75]*2\n",
     "    BG_COLOR = 200, 200, 200\n",
     "    CELL_SIZE = min(SCREEN_WIDTH, SCREEN_HEIGHT-75) / size\n",
-    "    pygame.init()\n",
-    "    screen = pygame.display.set_mode((SCREEN_WIDTH, SCREEN_HEIGHT), 0, 32)\n",
+    "    screen = pygame.display.set_mode((SCREEN_WIDTH-75, SCREEN_HEIGHT),0,32)\n",
     "    clock = pygame.time.Clock()\n",
+    "    country, animation_list = create_random_country(screen, size, proportion, race_colors, CELL_SIZE)\n",
+    "    happy_or_unhappy(country)\n",
     "    Mainloop = True\n",
     "    k=0\n",
     "    while Mainloop:\n",
@@ -156,23 +174,24 @@
     "        for event in pygame.event.get():\n",
     "            if event.type == pygame.QUIT:\n",
     "                Mainloop = False\n",
-    "        if percentage_of_unhappy(size, country) != 0:\n",
+    "        if percentage_of_unhappy(size, country)[0] != 0 or (percentage_of_unhappy(size, country)[0] == 0 and k % step != 0):\n",
     "            k+=1\n",
-    "            screen.fill(BG_COLOR)\n",
     "            #Обновление объектов\n",
     "            happy_or_unhappy(country)\n",
-    "            sad_move(country)\n",
+    "            sad_move(country,animation_list)\n",
     "            #Отображение объектов\n",
-    "            show(screen, country, size, CELL_SIZE, race_colors)\n",
-    "            draw_grid(screen, size, CELL_SIZE)\n",
-    "            show_info(screen, country, size, k, SCREEN_HEIGHT)\n",
-    "            pygame.display.update()\n",
+    "            if (k % step == 0):\n",
+    "                screen.fill(BG_COLOR)\n",
+    "                show(screen, animation_list)\n",
+    "                draw_grid(screen, size, CELL_SIZE)\n",
+    "                show_info(screen, country, size, k, SCREEN_HEIGHT)\n",
+    "        pygame.display.update()\n",
     "    pygame.quit()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,16 +200,25 @@
     "SIZE = 30\n",
     "#Пропорции. В данный массив можно указывать соотношения между рассами. Первое число - кол-во свободных клеток\n",
     "#Можно вводить любые пропорции, все само отнормируется\n",
-    "PROPORTION = [500,15,26,78,15,34,44,50]\n",
+    "PROPORTION = [500,30,30,30,30,30,30]\n",
     "#Цвета задаются случайно, в зависимости от колличества рас.\n",
     "RACE_COLORS = [tuple(randint(0,255)for c in range(3))for i in range(len(PROPORTION)-1)]\n",
     "#Исходные данные по умолчанию:\n",
     "'''PROPORTION = [10,45,45]\n",
     "RACE_COLORS = [(255,0,0),(0,0,255)]'''\n",
     "#Максимальный FPS\n",
-    "MAX_FPS = 50\n",
-    "run(SIZE, PROPORTION, MAX_FPS, RACE_COLORS)"
+    "MAX_FPS = 300\n",
+    "#Шаг отрисовки. Можно произодить отрисовку каждые n шагов (рекомендуется для размеров больше 100)\n",
+    "STEP = 1\n",
+    "run(SIZE, PROPORTION, MAX_FPS, RACE_COLORS, STEP)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
